<resources>
    <string name="app_name">Skisteder</string>
    <string name="showListMenu">Vis som liste</string>
    <string name="showMapMenu">Vis i kart</string>
    <string name="settingsMenu">Innstillinger</string>
    <string name="showInfoMenu">Informasjon</string>
    <string name="quitMenu">Avslutt</string>
    <string name="reloadMenu">Last på nytt</string>



    <string name="title_activity_preference">PreferenceActivity</string>
    <string name="action_settings">Innstillinger</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_resort_info">ResortInfoActivity</string>

    <string name="lblInfo">Info:</string>
    <string name="lblDistance">Distanse:</string>
    <string name="lblDuration">Kjøretid:</string>
    <string name="lblContact">Kontakt:</string>
    <string name="lblLifts">Åpne heiser:</string>
    <string name="lblSlopes">Åpne bakker:</string>
    <string name="lblService">Tlf service:</string>
    <string name="lblPatrol">Skipatrulje:</string>
    <string name="lblPhone">Tlf:</string>
    <string name="lblEmail">E-post:</string>

    <string name="timeUnit">timer</string>
    <string name="myLocation">Min lokasjon</string>

    <string name="prefCategoryZoomTitle">Zoom</string>
    <string name="prefCategoryFilterTitle">Filtrering av søkeresultater</string>
    <string name="prefCategoryDebugTitle">Debugging</string>

    <string name="prefTitle">Innstillinger</string>
    <string name="prefZoomSummary">Velg nivå på zoom i kartet</string>
    <string name="prefFineZoom">Zoom-nivå</string>

    <string name="prefRegionTitle">Regioner</string>
    <string name="prefRegionSummary">Velg de regionene du vil fjerne fra søkeresultatene</string>
    <string name="prefDebugModeTitle">Debugmodus</string>
    <string name="prefDebugModeSummary">Aktiver denne for å begrense søkeresultatene under testing</string>

    <string name="prefLiftFilterTitle">Antall heiser</string>
    <string name="prefLiftFilterSummary">Sett minimum antall skiheiser</string>
    <string name="prefSlopeFilterTitle">Minimum antall bakker</string>
    <string name="prefSlopeFilterSummary">Sett minimum antall bakker</string>

    <string name="aboutTitle">Om Skisteder</string>
    <string name="aboutProvides">Appen tilbyr:</string>
    <string name="aboutInformation">Om ekstern databruk:</string>
    <string name="aboutSettings">Innstillinger:</string>

    <string name="sort">Sorter etter</string>
    <string name="alphabetical">a-å</string>
    <string name="distance">km</string>


    <string name="positionUpdate">Distanse og kjøretider oppdateres nå automatisk</string>

    <string name="errorNoResult">FEIL... Resultat = 0. Gjør noe med filterne i innstillingene.</string>
    <string name="errorLocationNA">FEIL... Prøv å sette en ny lokasjon i kartet som er tilgjenglig med bil.</string>


    <string name="sortAlphaAsc">Sorterer listen alfabetisk, stigende.</string>
    <string name="sortAlphaDesc">Sorterer listen alfabetisk, synkende.</string>
    <string name="sortDistAsc">Sorterer listen på km, stigende.</string>
    <string name="sortDistDesc">Sorterer listen på km, synkende.</string>
</resources>
