<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/prefTitle">


    <PreferenceCategory
        android:title="@string/prefCategoryZoomTitle">

        <ListPreference
            android:title="@string/prefFineZoom"
            android:summary="@string/prefZoomSummary"
            android:entries="@array/zoomArray"
            android:entryValues="@array/zoomArray"
            android:key="prefZoomLevel"
            android:defaultValue="8.0f"/>
    </PreferenceCategory>


    <PreferenceCategory
        android:title="@string/prefCategoryFilterTitle">

        <MultiSelectListPreference
            android:title="@string/prefRegionTitle"
            android:summary="@string/prefRegionSummary"
            android:entries="@array/regionArrayEntries"
            android:entryValues="@array/regionArrayValues"
            android:key="prefMultichoiceRegions"
            android:defaultValue="@array/emptyArray"/>


        <ListPreference
            android:title="@string/prefLiftFilterTitle"
            android:summary="@string/prefLiftFilterSummary"
            android:entries="@array/liftArray"
            android:entryValues="@array/liftArray"
            android:key="prefLiftFilterList"
            android:defaultValue="1"/>

        <ListPreference
            android:title="@string/prefSlopeFilterTitle"
            android:summary="@string/prefSlopeFilterSummary"
            android:entries="@array/slopeArray"
            android:entryValues="@array/slopeArray"
            android:key="prefSlopeFilterList"
            android:defaultValue="1"/>

    </PreferenceCategory>


    <PreferenceCategory
        android:title="@string/prefCategoryDebugTitle">

        <CheckBoxPreference
            android:title="@string/prefDebugModeTitle"
            android:summary="@string/prefDebugModeSummary"
            android:key="prefDebug"
            android:defaultValue="true"/>
    </PreferenceCategory>




</PreferenceScreen>