<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">


    <item android:id="@+id/reload"
        android:title="@string/reloadMenu"
        app:showAsAction="always"
        android:icon="@drawable/reload_action_white"/>

    <item android:id="@+id/showList"
        android:title="@string/showListMenu"
        app:showAsAction="always"
        android:icon="@drawable/list_action_white"/>

    <item android:id="@+id/showInfo"
        android:title="@string/showInfoMenu"
        app:showAsAction="always"
        android:icon="@drawable/information_action_white"/>

    <item android:id="@+id/settings"
        android:title="string/settings"
        app:showAsAction="always"
        android:icon="@drawable/settings_action_white"/>

    <item android:id="@+id/quit"
        android:title="@string/quitMenu"
        app:showAsAction="always"
        android:icon="@drawable/quit_action_white"/>


</menu>
