<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/showMap"
        android:title="@string/showMapMenu"
        app:showAsAction="always"
        android:icon="@drawable/mapview_action_white"/>

    <item android:id="@+id/showInfo"
        android:title="@string/showInfoMenu"
        app:showAsAction="always"
        android:icon="@drawable/information_action_white"/>

    <item android:id="@+id/settings"
        android:title="string/settings"
        app:showAsAction="always"
        android:icon="@drawable/settings_action_white"/>

    <item android:id="@+id/quit"
        android:title="@string/quitMenu"
        app:showAsAction="always"
        android:icon="@drawable/quit_action_white"/>
</menu>