<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.s198599.s198599_mappe3.ResortInfoActivity"
    >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|left">

        <TextView
            android:id="@+id/rName"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_alignParentTop="true"

            />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rName"
            >

            <TextView
                android:id="@+id/lblDistance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/lblDistance"/>
            <TextView
                android:id="@+id/rDistance"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/lblDistance"
                />
            <TextView
                android:id="@+id/lblDuration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblDuration"
                android:layout_below="@id/lblDistance"/>
            <TextView
                android:id="@+id/rDuration"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/lblDuration"
                android:layout_below="@id/rDistance"/>

            <TextView
                android:id="@+id/lblLifts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/lblDuration"
                android:text="@string/lblLifts"/>
            <TextView
                android:id="@+id/rLifts"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/lblLifts"/>
            <TextView
                android:id="@+id/lblSlopes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/lblLifts"
                android:text="@string/lblSlopes"
                />
            <TextView
                android:id="@+id/rSlopes"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/lblSlopes"/>
        </RelativeLayout>


        <RelativeLayout
            android:layout_below="@id/rName"
            android:layout_width="150dp"
            android:layout_height="wrap_content"

            android:layout_alignParentRight="true"

            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblContact" />
        </RelativeLayout>
    </RelativeLayout>





</LinearLayout>
